--- a/src/app/public/flujo-de-caja/flujo-de-caja.component.scss
+++ b/src/app/public/flujo-de-caja/flujo-de-caja.component.scss
@@ -75,10 +75,10 @@ nb-card-header{
 
     overflow-x: auto;
     overflow-y: hidden;
-    /* .cajaMes{
+.cajaMes{
         width: 265px;
         margin-right: 15px;
-    } */
+    }
 }
 .verde{
     color: #5BCE60;
