--- a/src/app/public/ingresos-egresos/ingresos-egresos.component.html
+++ b/src/app/public/ingresos-egresos/ingresos-egresos.component.html
@@ -1,7 +1,7 @@
 
     <div class="row">
       <div class="col-sm-5">
-          <a href="dashboard/flujo-de-caja" class="previous" style="font-size:25px">&larr;</a>
+          <i class="fa fa-arrow-left" style="color:black; size:25px; cursor: pointer;" (click)="goToFlujo()"></i>
         <label for="" style="color:black; font-weight: bold; padding: 15px">Ingresos vs Egresos</label>
       </div>
       <div class="col-sm-1"></div>
@@ -78,7 +78,7 @@
             <div>
               
             </div>
-            <canvas #grafico1 style="width: 100%; height: 300px;"></canvas>
+            <canvas id="IvsE" style="width: 100%"></canvas>
           </nb-card-body>
         </nb-card>
         <nb-card>
