--- a/src/app/public/agregar-ingreso/agregar-ingreso.component.html
+++ b/src/app/public/agregar-ingreso/agregar-ingreso.component.html
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-12">
                             <div class="form-group">
                                 <label for="metodoPago">Método de pago</label>
                                 <select id="metodoPago" formControlName="metodoPago" class="form-control">
@@ -72,7 +72,7 @@
                                 </select>
                             </div>  
                         </div>
-                        <div class="col-sm-6">
+                        <!-- <div class="col-sm-6">
                             <div class="form-group">
                                 <label for="recurrencia">Recurrencia</label>
                                 <select id="recurrencia" formControlName="recurrencia" class="form-control">
@@ -83,18 +83,18 @@
                                     <option value="anual">No se repite</option>
                                 </select>
                             </div>  
-                        </div>
+                        </div> -->
                     </div>
                     <div class="row">
-                        <div class="col-sm-6">
+                        <!-- <div class="col-sm-6">
                             <div class="form-group">
                                 <label for="inicioRecurrencia">Inicio de recurrencia</label>
                                 <input id="inicioRecurrencia" type="date" formControlName="inicioRecurrencia" class="form-control">
                             </div>
-                        </div>
-                        <div class="col-sm-6">
+                        </div> -->
+                        <div class="col-sm-12">
                             <div class="form-group">
-                                <label for="finRecurrencia">Fin de recurrencia</label>
+                                <label for="finRecurrencia">Fecha</label>
                                 <input id="finRecurrencia" type="date" formControlName="finRecurrencia" class="form-control">
                             </div>
                         </div>
