--- a/src/app/public/ingresos-egresos/ingresos-egresos.component.html
+++ b/src/app/public/ingresos-egresos/ingresos-egresos.component.html
@@ -93,10 +93,10 @@
                       <div class="row">
                         <div class="col-sm-4"></div>
                         <div class="col-sm-4">
-                          <button class="btn btn-blanco" (click)="mostrarIngresos=true;generarGrafico2Ingresos()" style="border-color: white" [ngStyle]="{'color': mostrarIngresos? '#5BCE60':'white', 'background-color': mostrarIngresos? 'white':'#E3633D'}">Ingresos</button>
+                          <button class="btn btn-blanco" (click)="mostrarIngresos=true;actualizarGraficos()" style="border-color: white" [ngStyle]="{'color': mostrarIngresos? '#5BCE60':'white', 'background-color': mostrarIngresos? 'white':'#E3633D'}">Ingresos</button>
                         </div>
                         <div class="col-sm-4">
-                          <button (click)="mostrarIngresos=false;generarGrafico2Ingresos()" class="btn btn-blanco" style="border-color: white" [ngStyle]="{'color': mostrarIngresos? 'white':'#E3633D', 'background-color': mostrarIngresos? '#5BCE60':'white'}">Egresos</button>
+                          <button (click)="mostrarIngresos=false;actualizarGraficos()" class="btn btn-blanco" style="border-color: white" [ngStyle]="{'color': mostrarIngresos? 'white':'#E3633D', 'background-color': mostrarIngresos? '#5BCE60':'white'}">Egresos</button>
                 
                               <!--<div *ngIf="calendario" class="col-sm-6">
                                   <dl-date-time-picker
