--- a/src/app/public/flujo-de-caja/flujo-de-caja.component.scss
+++ b/src/app/public/flujo-de-caja/flujo-de-caja.component.scss
@@ -24,6 +24,8 @@
     font-size: 9px;
     padding: 10px;
     text-transform: none;
+    border:0.5px solid grey;
+    border-radius: 5px
 }
 .btn-blanco{
     background-color: white;
@@ -31,6 +33,10 @@
     width: 100%;
     font-size: 9px;
     padding: 10px;
+}
+
+.btn-blanco:hover{
+    text-transform: none
 }
 .btn-blanco-sm{
     background-color: white;
