--- a/src/app/public/ingresos-egresos/ingresos-egresos.component.scss
+++ b/src/app/public/ingresos-egresos/ingresos-egresos.component.scss
@@ -21,6 +21,8 @@
     font-size: 9px;
     padding: 10px;
     text-transform: none;
+    border:0.5px solid grey;
+    border-radius: 5px
 }
 .btn-blanco{
     background-color: white;
