--- a/src/app/public/indicadores/indicadores.component.scss
+++ b/src/app/public/indicadores/indicadores.component.scss
@@ -12,6 +12,15 @@
     width: 100%;
     font-size: 9px;
     padding: 10px;
+    height:100%
+}
+
+.btn-blanco:hover{
+    color:black
+}
+
+.btn-blanco::selection{
+    color:black
 }
 .titulo{
     font-size: 12px;
@@ -25,3 +34,50 @@
 .pequenho{
     font-size: 9px;
 }
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    background-color: white;
+    color: black;
+    width: 100%;
+    font-size: 9px;
+    padding: 10px;
+    border-radius: .375rem;
+    border: 2px solid transparent;
+  }
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+.show {display:block;}
+.dropbtn {
+    background-color: white;
+    color: black;
+    width: 100%;
+    font-size: 9px;
+    border: none;
+    cursor: pointer;
+    font-weight: bold
+  }
+.dropdown-content p {
+    color: black;
+    padding: 8px 16px;
+    text-decoration: none;
+    display: block;
+  }
+p {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+  }
+  
+p:hover {
+    background-color:gray;
+    color: black;
+  }
+  
