--- a/src/app/public/signup/signup.component.html
+++ b/src/app/public/signup/signup.component.html
@@ -12,86 +12,206 @@
               </div>
             </div>
             <div *ngIf="!etapa1" class="row">
-              <div class="titulo" style="margin-left: 35%; margin-bottom: 40px; margin-top: 20px">Información básica</div>
+              <div class="titulo" style="margin-bottom: 40px; margin-top: 20px">Información básica</div>
             </div>
-        <div *ngIf="!etapa1" id="user-data">
+        <div *ngIf="!etapa1" id="negocio-data">
           <div class="form-group">
             <input 
-              type="email" 
-              id="email" 
-              formControlName="email"
-              placeholder="Correo electrónico" 
+              type="text" 
+              id="nombreEmpresa" 
+              formControlName="nombreEmpresa"
+              placeholder="Nombre empresa" 
               class="form-control" >
           </div>
+          <div class="row">
+            <div class="col-sm-6">
           <div class="form-group">
             <input 
-              type="password" 
-              id="contrasena1" 
-              formControlName="contrasena1"
-              placeholder="Contraseña" 
+              type="text" 
+              id="contactoNombre" 
+              formControlName="contactoNombre"
+              placeholder="Nombre contacto" 
               class="form-control">
-          </div>
+          </div></div>
+        <div class="col-sm-6">
           <div class="form-group">
             <input 
-              type="password" 
-              id="contrasena2" 
-              formControlName="contrasena2"
-              placeholder="Confirmar contraseña" 
+              type="number"
+              id="contactoTelefono" 
+              formControlName="contactoTelefono"
+              placeholder="Telefono contacto" 
               class="form-control">
           </div>
-          <div class="form-group" >
-            <select name="pais" id="pais"style="width:100%;height:51.72px">
-              <option value="colombia">Colombia</option>
-              <option value="peru">Perú</option>
-              <option value="brasil">Barsil</option>
-            </select>
+        </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+
+            <div class="form-group">
+              <input 
+                type="email"
+                id="contactoEmail" 
+                formControlName="contactoEmail"
+                placeholder="Email contacto" 
+                class="form-control">
+            </div>
           </div>
+          <div class="col-sm-6">
+
+            <div class="form-group">
+              <input 
+                type="text"
+                id="contactoCargo" 
+                formControlName="contactoCargo"
+                placeholder="Cargo contacto" 
+                class="form-control">
+            </div>
+          </div>
+        </div>
+          <div class="form-group">
+            <input 
+              type="text"
+              id="descripcion" 
+              formControlName="descripcion"
+              placeholder="Descripcion empresa" 
+              class="form-control">
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+            <div class="form-group">
+              <select
+                [(ngModel)]="categoriaSeleccionada.id"
+                (change)="onSelect($event.target.value)"
+                id="categoriaNegocio" 
+                formControlName="categoriaNegocio" 
+                placeholder="Categoría del negocio"
+                class="form-control">
+                <option *ngFor="let categoria of categorias" value= {{categoria.id}}>{{categoria.name}}</option>
+              </select>
+            </div></div>
+            <div class="col-sm-6">
+            <div class="form-group">
+                <select
+                  id="subCategoriaNegocio" 
+                  formControlName="subCategoriaNegocio" 
+                  placeholder="Subcategoría del negocio"
+                  class="form-control">
+                  <option *ngFor="let subCategoria of subCategorias" value= {{subCategoria.id}}>{{subCategoria.name}}</option>
+                </select>
+              </div>
+          </div></div>
           <div class="form-group">
             <button class="btn btn-azul">Continuar</button>
           </div> 
         </div>
         <div *ngIf="etapa1 && !etapa2" class="row">
-            <div class="titulo" style="margin-left: 30%; margin-bottom: 40px; margin-top: 20px">Información comercial</div>
+            <div class="titulo" style="margin-bottom: 40px">Información usuario</div>
           </div>
-        <div *ngIf="etapa1 && !etapa2" id="negocio-data">
-          <div class="form-group">
-            <input 
-              type="text" 
-              id="nombreNegocio" 
-              formControlName="nombreNegocio"
-              placeholder="Nombre del negocio" 
-              class="form-control" >
-          </div>
-          <div class="form-group">
-            <input 
-              type="number" 
-              id="nit" 
-              formControlName="nit"
-              placeholder="Número del N.I.T." 
-              class="form-control"
-            >
-          </div>
-          <div class="form-group">
-            <select
-              [(ngModel)]="categoriaSeleccionada.id"
-              (change)="onSelect($event.target.value)"
-              id="categoriaNegocio" 
-              formControlName="categoriaNegocio" 
-              placeholder="Categoría del negocio"
-              class="form-control">
-              <option *ngFor="let categoria of categorias" value= {{categoria.id}}>{{categoria.name}}</option>
-            </select>
-          </div>
-          <div class="form-group">
-              <select
-                id="subCategoriaNegocio" 
-                formControlName="subCategoriaNegocio" 
-                placeholder="Subcategoría del negocio"
-                class="form-control">
-                <option *ngFor="let subCategoria of subCategorias" value= {{subCategoria.id}}>{{subCategoria.name}}</option>
-              </select>
+        <div *ngIf="etapa1 && !etapa2" id="usuario-data">
+          <div class="row">
+            <div class="col-sm-6">
+
+              <div class="form-group">
+                <input 
+                  type="text" 
+                  id="nombreUsuario" 
+                  formControlName="nombreUsuario"
+                  placeholder="Nombre usuario" 
+                  class="form-control" >
+              </div>
             </div>
-            <div class="form-group">
+            <div class="col-sm-6">
+
+              <div class="form-group">
+                <input 
+                  type="text" 
+                  id="apellido" 
+                  formControlName="apellido"
+                  placeholder="Apellido usuario" 
+                  class="form-control"
+                >
+              </div>
+            </div>
+              </div>
+              <div class="row">
+                  <div class="col-sm-6">
+      
+                    <div class="form-group">
+                      <input 
+                        type="number" 
+                        id="telefono" 
+                        formControlName="telefono"
+                        placeholder="Telefono usuario" 
+                        class="form-control" >
+                    </div>
+                  </div>
+                  <div class="col-sm-6">
+      
+                    <div class="form-group">
+                      <input 
+                        type="email" 
+                        id="emailUsario" 
+                        formControlName="emailUsuario"
+                        placeholder="Email usuario" 
+                        class="form-control"
+                      >
+                    </div>
+                  </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+            
+                          <div class="form-group">
+                            <input 
+                              type="password" 
+                              id="contrasena1" 
+                              formControlName="contrasena1"
+                              placeholder="Contraseña" 
+                              class="form-control" >
+                          </div>
+                        </div>
+                        <div class="col-sm-6">
+            
+                          <div class="form-group">
+                            <input 
+                              type="password" 
+                              id="contrasena2" 
+                              formControlName="contrasena2"
+                              placeholder="Confirmar contraseña" 
+                              class="form-control"
+                            >
+                          </div>
+                        </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+        
+                      <div class="form-group">
+                        <input 
+                          type="text" 
+                          id="cargo" 
+                          formControlName="cargo"
+                          placeholder="Cargo empresa" 
+                          class="form-control" >
+                      </div>
+                    </div>
+                    <div class="col-sm-6">
+        
+                        <div class="form-group">
+                            <select
+                              id="tipo" 
+                              formControlName="tipo" 
+                              placeholder="Tipo de usuario"
+                              class="form-control">
+                              <option value="administrador">Administrador</option>
+                              <option value="gerenteFinanciero">Gerente financiero</option>
+                              <option value="cliente">Cliente</option>
+                            </select>
+                          </div>
+                    </div>
+            </div>
+          
+          <!--   <div class="form-group">
                 <input 
                   type="file" 
                   id="logoNegocio" 
@@ -99,7 +219,7 @@
                   placeholder="Adjunta el logo del negocio" 
                   class="form-control"
                 >
-              </div>
+              </div> -->
           <div class="form-group">
             <button class="btn btn-azul">Registrar negocio</button>
           </div>
