--- a/src/app/public/indicadores/indicadores.component.html
+++ b/src/app/public/indicadores/indicadores.component.html
@@ -5,7 +5,7 @@
       <div class="row">
           <div class="col-sm-3">
             <div (click)="myFunction()" class="dropdown">
-              <button class="dropbtn" >PERIODO</button>
+              <button class="dropbtn" >PERIODICIDAD</button>
               <div id="myDropdown" class="dropdown-content">
                 <p style="margin:0; cursor:pointer" (click)="agrupar=1;calculoIndicadores();actualizarGraficos()">Mes</p><br>
                 <!-- <p style="margin:0; cursor:pointer" (click)="agrupar=3;calculoIndicadores();actualizarGraficos()">Trimestre</p><br> -->
@@ -94,7 +94,7 @@
     <div class="col-sm-6">
       <nb-card [nbSpinner]="spinerGrafica" nbSpinnerStatus="success" nbSpinnerMessage="Cargando">
         <nb-card-header style="padding: 10px 0px 0px 25px ;">
-          <p>Razón corriente y prueba ácida</p>
+          <h5>Razón corriente y prueba ácida</h5>
         </nb-card-header>
         <nb-card-body>
           <canvas #grafico5 style="width: 100%; height: 300px;"></canvas>
@@ -104,7 +104,7 @@
     <div class="col-sm-6">
       <nb-card [nbSpinner]="spinerGrafica" nbSpinnerStatus="success" nbSpinnerMessage="Cargando">
         <nb-card-header style="padding: 10px 0px 0px 25px ;">
-          <p>Capital de trabajo</p>
+          <h5>Capital de trabajo</h5>
         </nb-card-header>
         <nb-card-body>
           <canvas #grafico6 style="width: 100%; height: 300px;"></canvas>
@@ -116,7 +116,7 @@
     <div class="col-sm-6">
       <nb-card [nbSpinner]="spinerGrafica" nbSpinnerStatus="success" nbSpinnerMessage="Cargando">
         <nb-card-header style="padding: 10px 0px 0px 25px ;">
-          <p>Rotaciones (días)</p>
+          <h5>Rotaciones (días)</h5>
         </nb-card-header>
         <nb-card-body>
           <canvas #grafico7 style="width: 100%; height: 300px;"></canvas>
@@ -126,7 +126,7 @@
     <div class="col-sm-6">
       <nb-card [nbSpinner]="spinerGrafica" nbSpinnerStatus="success" nbSpinnerMessage="Cargando">
         <nb-card-header style="padding: 10px 0px 0px 25px ;">
-          <p>Rotación de activos (días)</p>
+          <h5>Rotación de activos (días)</h5>
         </nb-card-header>
         <nb-card-body>
           <canvas #grafico8 style="width: 100%; height: 300px;"></canvas>
@@ -138,7 +138,7 @@
     <div class="col-sm-6">
       <nb-card [nbSpinner]="spinerGrafica" nbSpinnerStatus="success" nbSpinnerMessage="Cargando">
         <nb-card-header style="padding: 10px 0px 0px 25px ;">
-          <p>Márgenes de rentabilidad</p>
+          <h5>Márgenes de rentabilidad</h5>
         </nb-card-header>
         <nb-card-body>
           <canvas #grafico9 style="width: 100%; height: 300px;"></canvas>
@@ -148,7 +148,7 @@
     <div class="col-sm-6">
       <nb-card [nbSpinner]="spinerGrafica" nbSpinnerStatus="success" nbSpinnerMessage="Cargando">
         <nb-card-header style="padding: 10px 0px 0px 25px ;">
-          <p>ROA y ROE</p>
+          <h5>ROA y ROE</h5>
         </nb-card-header>
         <nb-card-body>
           <canvas #grafico10 style="width: 100%; height: 300px;"></canvas>
@@ -160,7 +160,7 @@
     <div class="col-sm-6">
       <nb-card [nbSpinner]="spinerGrafica" nbSpinnerStatus="success" nbSpinnerMessage="Cargando">
         <nb-card-header style="padding: 10px 0px 0px 25px ;">
-          <p>Endeudamiento</p>
+          <h5>Endeudamiento</h5>
         </nb-card-header>
         <nb-card-body>
           <canvas #grafico11 style="width: 100%; height: 300px;"></canvas>
@@ -170,7 +170,7 @@
     <div class="col-sm-6">
       <nb-card [nbSpinner]="spinerGrafica" nbSpinnerStatus="success" nbSpinnerMessage="Cargando">
         <nb-card-header style="padding: 10px 0px 0px 25px ;">
-          <p>Sistema Dupont</p>
+          <h5>Sistema Dupont</h5>
         </nb-card-header>
         <nb-card-body>
           <canvas #grafico12 style="width: 100%; height: 300px;"></canvas>
