--- a/src/app/public/signup/signup.component.html
+++ b/src/app/public/signup/signup.component.html
@@ -100,6 +100,11 @@
                 </select>
               </div>
           </div></div>
+          <div style=margin-bottom:15px>
+            <label>Logo de la empresa:</label><br>
+            <input type="file" ng2FileSelect [uploader]="uploader" accept="image/*;capture=camera">
+            <!-- <button class="btn btn-success" (click)="upload()">Subir imagen</button> -->
+          </div>
           <div class="form-group">
             <button class="btn btn-azul">Continuar</button>
           </div> 
